Fix spacing issue with highlights

--- a/_assets/css/_content.scss
+++ b/_assets/css/_content.scss
@@ -13,7 +13,7 @@ main {
 
   p {
     font-size: 1.1em;
-    line-height: 1.4;
+    line-height: 1.8;
     width: 100%;
     max-width: 640px;
     margin: 1em auto;
