--- a/_assets/css/_highlight.scss
+++ b/_assets/css/_highlight.scss
@@ -1,12 +1,8 @@
 .hl {
-  background-color: $veen-light-grey;
-  padding: 0.2em;
+  background-color: darken($veen-light-grey, 5%);
+  padding: 0 0.25em;
   display: inline-block;
   margin-bottom: 0.2em;
   font-weight: bold;
   color: rgba(0, 0, 0, 0.6);
-}
-
-.no-hl {
-  line-height: 1.8;
 }
